--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,18 +1,16 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/asseco
-    username: postgres
-    password: dontgotosql
+    url: jdbc:postgresql://localhost:5432/$dbname
+    username: $username
+    password: $password
 
   jpa:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
-        jdbc.batch_size: 2000
         generate_statistics: false
-        show_sql: true
-    hibernate:
-      ddl-auto: none
+        show_sql: false
+        hibernate.hbm2ddl.auto: none
 
   liquibase:
     enabled: true
