--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/$dbname
-    username: $username
-    password: $password
+    url: jdbc:postgresql://localhost:5432/asseco
+    username: postgres
+    password: dontgotosql
 
   jpa:
     properties:
